update html files, working on style.css

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Basic-Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	</head>
@@ -15,11 +15,11 @@
 				<a href="Contact.html">Contact</a>
 			</nav>
 		</header>
-                
+
         <!-- Begin Content area -->
         <div id="content-area">
 
-        	<section id="content">
+        	<section id="main-content">
         		<h2>Contact</h2>
                         <hr>
         		<form>
