--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Portfolio</title>
+		<title>Basic-Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	</head>
 	<body>
 		
 		<header>
-			<div id="name">Your Name</div>
+			<figure class="name"><h1>Shaun Fuller</h1></figure>
 			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
+				<a href="index.html">About</a> |
+				<a href="portfolio.html">Portfolio</a> |
 				<a href="Contact.html">Contact</a>
 			</nav>
 		</header>
+		 
         <!-- Begin Content area -->
-        <div id="content-area">
+        <div class="content-area">
         	
-        	<section id="content">
+        	<section id="main-content">
         		<h2>About Me</h2>
         	    <hr>
-        		<img id="img-profile" src="assets/images/ad_fullers_lthumb.jpg">
-        		<p>I am a North Carolina native and I grew up in Orange county. I have lived in other cities but I really like living in Orange county.  I went to High School at Orange High.  Growing up my parents always tought me that anything can be accoomplished as long as you put your mind to it.  With that knowledge I have always had the drive to learn and experience new things. 
+        		<img id="img-profile" src="assets/images/ad_fullers_lthumb.jpg"><p>I am a North Carolina native and I grew up in Orange county. I have lived in other cities but I really like living in Orange county.  I went to High School at Orange High.  Growing up my parents always tought me that anything can be accoomplished as long as you put your mind to it.  With that knowledge I have always had the drive to learn and experience new things. 
 
         		I have always been fascinated with computers, so that has always been an interest for me.  When I was grade school, I was so excited because our school got an Apple personal computer.  I took right to it and at that it was all command line at that time. One of the first games we received was Oregon Trail.  I use to enjoy playing that game and though it was amazing that I could type in commands and the graphic on the screen would move. 
 
         		As I got older and the internet came to homes across the country.  I started to find that html was fascinating and started reading about web sites were made. I had learned some code and made a few sites of my own.  I did not really start getting into web design until I started working for UNC ITS department. Knowing I had some knowledge of html I was placed on the knowledge management team. Where I wrote some help documents.
         		</p>        		
         	</section>
-        	
+
         	<!-- Sidebar Content area -->
         	<section id="sidebar">
         		<h2>Connect with Me</h2>
