--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Basic-Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	</head>
@@ -19,7 +19,7 @@
         <!-- Begin Content area -->
         <div id="content-area">
         	
-        	<section id="content">  
+        	<section id="main-content">  
         		<h2>Portfolio<h2>
             	<hr>
         		<figure id="fig-hangman">
