--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,16 @@
 	<body>
 		
 		<header>
-			<div id="name">Your Name</div>
-			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="Contact.html">Contact</a>
-			</nav>
-		</header>
+                        <figure class="name"><h1>Shaun Fuller</h1></figure>
+                        <nav>
+                                <a href="index.html">About</a> |
+                                <a href="portfolio.html">Portfolio</a> |
+                                <a href="Contact.html">Contact</a>
+                        </nav>
+                </header>
 
         <!-- Begin Content area -->
-        <div id="content-area">
+        <div class="content-area">
 
         	<section id="main-content">
         		<h2>Contact</h2>
@@ -35,18 +35,18 @@
 
                 <!-- Sidebar Content area -->
         	<section id="sidebar">
-        		<h2>Connect with Me</h2>
-        	        <hr>
-        		<aside>
-        		     <a href="http://github.com"><img id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
-			     <a href="http://linkedin.com"><img id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
-			     <a href="http://stackoverflow.com" ><img id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
-        		</aside>
-        	</section>
-        	
+                        <h2 id="connect">Connect with Me</h2>
+                    <hr>
+                        <aside>
+                            <a href="http://github.com"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
+                                <a href="http://linkedin.com"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
+                                <a href="http://stackoverflow.com" ><img class="img-size" id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
+                        </aside>
+                </section>
+                <hr id="teal-bar">
                 <footer id="footer">
-        		<p>&copy; Copyright 2016 Shaun L. Fuller</p>
-        	</footer>
+                        <p>&copy; Copyright 2016 Shaun L. Fuller</p>
+                </footer>
 
         </div><!-- End Content area -->
 	</body>
