update html and css for html files.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,22 +21,23 @@
         	
         	<section id="main-content">  
         		<h2 class="content-title">Portfolio<h2>
-            	<hr>
-        		<figure id="fig-hangman">
-        			<div class="fig-background">Hangman</div>
-        		</figure>
-        		<figure id="fig-rpggame">
-        			<div class="fig-background">RPG Game</div>
-        		</figure>
-        		<figure id="fig-triviagame">
-        			<div class="fig-background">Trivia Game</div>
-        		</figure>
-        		<figure id="fig-widget">
-        			<div class="fig-background">Rutgers Info Widget</div>
-        		</figure>
-        		<figure id="fig-rps">
-        			<div class="fig-background">Rock Paper Scissors</div>
-        		</figure>    		
+            	<hr id="hr-maincontent">
+        		
+        		<div class="img-hangman">
+        			<figure id="fig-hangman">Hangman</figure>
+        		</div>
+        		<div class="img-rpggame">
+        			<figure id="fig-rpggame">RPG Game</figure>
+        		</div> 		
+        		<div class="img-triviagame">
+        			<figure id="fig-triviagame">Trivia Game</figure>
+        		</div>
+        		<div class="img-widget">
+        			<figure id="fig-widget">Rutgers Info Widget</figure>
+        		</div>
+        		<div class="img-rps">
+        			<figure id="fig-rps">Rock Paper Scissors</figure>
+        		</div>    		
         	</section>
 
             <!-- Sidebar Content area -->
@@ -44,14 +45,14 @@
         		<h2 id="connect">Connect with Me</h2>
         	    <hr>
         		<aside>
-        		    <a href="http://github.com"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
-			     	<a href="http://linkedin.com"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
-			     	<a href="http://stackoverflow.com" ><img class="img-size" id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
-        		</aside>
+                    <a href="http://github.com" target="_blank"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
+                    <a href="http://linkedin.com" target="_blank"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
+                    <a href="http://stackoverflow.com" target="_blank" ><img class="img-size" id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
+                </aside>
         	</section>
         	<hr id="teal-bar">
         	<footer id="footer">
-        		<p>&copy; Copyright 2016 Shaun L. Fuller</p>
+        		&copy; Copyright 2016 Shaun L. Fuller
         	</footer>
 
         </div><!-- End Content area -->
