--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,16 @@
         <div class="content-area">
 
         	<section id="main-content">
-        		<h2>Contact</h2>
-                        <hr>
+        		<h2 class="content-title">Contact</h2>
+                        <hr id="hr-maincontent">
         		<form>
-                        Name<br>
-                        <input type="text" name="fullname" id="fullname"><br>
-                        Email<br>
-                        <input type="email" name="email" id="email"><br>
-                        Message<br>
+                        <p>Name</p><br>
+                        <input type="text" name="fullname" id="fullname" placeholder="John Smith"><br>
+                        <br>
+                        <p>Email</p><br>
+                        <input type="email" name="email" id="email" placeholder="example@gmail.com"><br>
+                        <br>
+                        <p>Message</p><br>
                         <textarea name="message" id='message'></textarea><br>
                         <input type="submit" name="submit" id="submit" value="Submit">
                         </form>	
@@ -38,14 +40,14 @@
                         <h2 id="connect">Connect with Me</h2>
                     <hr>
                         <aside>
-                            <a href="http://github.com"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
-                                <a href="http://linkedin.com"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
-                                <a href="http://stackoverflow.com" ><img class="img-size" id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
+                            <a href="http://github.com" target="_blank"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
+                            <a href="http://linkedin.com" target="_blank"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
+                            <a href="http://stackoverflow.com" target="_blank" ><img class="img-size" id="img-stackoverflow" src="assets/images/stackoverflow.png" alt="stackoverflow.com"></a>
                         </aside>
                 </section>
                 <hr id="teal-bar">
                 <footer id="footer">
-                        <p>&copy; Copyright 2016 Shaun L. Fuller</p>
+                        &copy; Copyright 2016 Shaun L. Fuller
                 </footer>
 
         </div><!-- End Content area -->
