remove hr on footer and change to figure

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
         	</section>
         	</div>
         	</div><!-- End Content area -->
-        	<hr id="teal-bar">
+        	<figure id="teal-bar"></figure>
         	<footer id="footer">
         		&copy; Copyright 2016 Shaun L. Fuller
         	</footer>
