--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </section>
                 </div>
                 </div><!-- End Content area -->
-                <hr id="teal-bar">
+                <figure id="teal-bar"></figure>
                 <footer id="footer">
                         &copy; Copyright 2016 Shaun L. Fuller
                 </footer>
