Fixed main content text, added stickey footer.

--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,14 @@
         		<h2 class="content-title">Contact</h2>
                         <hr id="hr-maincontent">
         		<form>
-                        <p>Name</p><br>
-                        <input type="text" name="fullname" id="fullname" placeholder="John Smith"><br>
+                        <p>Name</p>
+                        <input type="text" name="fullname" id="fullname" placeholder="John Smith">
                         <br>
-                        <p>Email</p><br>
-                        <input type="email" name="email" id="email" placeholder="example@gmail.com"><br>
+                        <p>Email</p>
+                        <input type="email" name="email" id="email" placeholder="example@gmail.com">
                         <br>
-                        <p>Message</p><br>
-                        <textarea name="message" id='message'></textarea><br>
+                        <p>Message</p>
+                        <textarea name="message" id='message'></textarea>
                         <input type="submit" name="submit" id="submit" value="Submit">
                         </form>	
         	</section>
