fixed nav pike opacity

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
 		<header>
 			<figure class="name"><h1>Shaun Fuller</h1></figure>
 			<nav>
-				<a href="index.html">About</a> |
-				<a href="portfolio.html">Portfolio</a> |
+				<a href="index.html">About</a> <span class="pike">|</span>
+				<a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
 				<a href="Contact.html">Contact</a>
 			</nav>
 		</header>
@@ -43,7 +43,7 @@
             <!-- Sidebar Content area -->
         	<section id="sidebar">
         		<h2 id="connect">Connect with Me</h2>
-        	    <hr>
+        	    <hr id="hr-connect">
         		<aside>
                     <a href="http://github.com" target="_blank"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
                     <a href="http://linkedin.com" target="_blank"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
