--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
                 
                         <figure class="name"><h1>Shaun Fuller</h1></figure>
                         <nav>
-                                <a href="index.html">About</a> |
-                                <a href="portfolio.html">Portfolio</a> |
+                                <a href="index.html">About</a> <span class="pike">|</span>
+                                <a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
                                 <a href="Contact.html">Contact</a>
                         </nav>
                         
@@ -24,7 +24,7 @@
         	<section id="main-content">
         		<h2 class="content-title">Contact</h2>
                         <hr id="hr-maincontent">
-        		<form>
+        		<form method="post" action="">
                         <p>Name</p>
                         <input type="text" name="fullname" id="fullname" placeholder="John Smith">
                         <br>
@@ -40,7 +40,7 @@
                 <!-- Sidebar Content area -->
         	<section id="sidebar">
                         <h2 id="connect">Connect with Me</h2>
-                    <hr>
+                        <hr id="hr-connect">
                         <aside>
                             <a href="http://github.com" target="_blank"><img class="img-size" id="img-github" src="assets/images/github_square_black.png" alt="Github.com"></a>
                             <a href="http://linkedin.com" target="_blank"><img class="img-size" id="img-linkedin" src="assets/images/linkedin_square.png" alt="Linkedin.com"></a>
