--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav>
 				<a href="index.html">About</a> <span class="pike">|</span>
 				<a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
-				<a href="Contact.html">Contact</a>
+				<a href="contact.html">Contact</a>
 			</nav>
 		</header>
 		 
