--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,41 @@
 <html>
 	<head>
 		<title>Basic-Portfolio</title>
+        <meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	</head>
 	<body>
 		
 		<header>
-                
-                        <figure class="name"><h1>Shaun Fuller</h1></figure>
-                        <nav>
-                                <a href="index.html">About</a> <span class="pike">|</span>
-                                <a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
-                                <a href="contact.html">Contact</a>
-                        </nav>
-                        
-                </header>
+            <div class="container">                
+            <figure class="name"><h1>Shaun Fuller</h1></figure>
+                <nav>
+                    <a href="index.html">About</a> <span class="pike">|</span>
+                    <a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
+                    <a href="contact.html">Contact</a>
+                </nav> 
+            </div>           
+        </header>
 
         <!-- Begin Content area -->
         <div class="content-area">
                 <div class="container">
-        	<section id="main-content">
-        		<h2 class="content-title">Contact</h2>
-                        <hr id="hr-maincontent">
-        		<form method="post" action="">
-                        <p>Name</p>
-                        <input type="text" name="fullname" id="fullname" placeholder="John Smith">
-                        <br>
-                        <p>Email</p>
-                        <input type="email" name="email" id="email" placeholder="example@gmail.com">
-                        <br>
-                        <p>Message</p>
-                        <textarea name="message" id='message'></textarea>
-                        <input type="submit" name="submit" id="submit" value="Submit">
+        	    <section id="main-content">
+        		    <h2 class="content-title">Contact</h2>
+                    <hr id="hr-maincontent">
+        		        <form method="post" action="">
+                            <p>Name</p>
+                            <input type="text" name="fullname" id="fullname" placeholder="John Smith">
+                            <br>
+                            <p>Email</p>
+                            <input type="email" name="email" id="email" placeholder="example@gmail.com">
+                            <br>
+                            <p>Message</p>
+                            <textarea name="message" id='message'></textarea>
+                            <input type="submit" name="submit" id="submit" value="Submit">
                         </form>	
-        	</section>
+        	    </section>
 
                 <!-- Sidebar Content area -->
         	<section id="sidebar">
