--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
 	<head>
 		<title>Basic-Portfolio</title>
+        <meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	</head>
 	<body>
 		
 		<header>
+			<div class="container">
 			<figure class="name"><h1>Shaun Fuller</h1></figure>
 			<nav>
-				<a href="index.html">About</a> <span class="pike">|</span>
-				<a href="portfolio.html">Portfolio</a> <span class="pike">|</span>
+				<a href="index.html">About</a> <span class="pike"> | </span>
+				<a href="portfolio.html">Portfolio</a> <span class="pike"> | </span>
 				<a href="contact.html">Contact</a>
 			</nav>
+			</div>
 		</header>
 		 
         <!-- Begin Content area -->
